# elk-stack

./: .gitignore  404.html  Notes.md  TODO.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
Installation/install/: index.html
Logstash/Readme/: index.html
assets/: Elasticsearch-Cluster.drawio
certification/: Questions.md  deck.md  links.md
debugging/: index.html
docs/: debugging.md  index.md
docs/Installation/: install.md
docs/Logstash/: Readme.md
docs/My_Notes/: CCR.md  Indices.md  Questions.md  Search_Query.md
docs/elasticsearch/: Basic-Concepts.md  Exploring-Cluster.md  Finding-your-feet.md  Modifying-Data.md  What-is-Elasticsearch.md  YouKnowForSearch.md
docs/elasticsearch-certification/: Readme.md
docs/indexing-data/: Aliases.md  CRUD-Operations.md  Indexing-Data.md  Ingest-Pipelines.md  Loading-data.md  Reindex-UpdateQuery.md  Templates.md
docs/install-and-config/: Install-and-Config.md
elastic-practice-lab/: Readme.md  Vagrantfile  provision_elasticsearch.sh  provision_kibana.sh  provision_privileged.sh
elastic-practice-lab/install/: elasticsearch.yml  hosts  jvm.options  kibana.yml  sysctl.conf
elasticsearch-certification/Readme/: index.html
elasticsearch/Basic-Concepts/: index.html
elasticsearch/Exploring-Cluster/: index.html
elasticsearch/Finding-your-feet/: index.html
elasticsearch/Modifying-Data/: index.html
elasticsearch/What-is-Elasticsearch/: index.html
examples/: Readme.md  filebeat.yaml  inverted-index.go  metricbeat.yaml
examples/docs/: doc1.txt  (+5 more)
search/: search_index.json
tools/: vscode-extensions.md
(+47 files in other folders)
