[tool.poetry]
name = "elk-stack"
version = "0.1.0"
description = "ELK Stack"
authors = ["Gaurav Sood <gsood@sapient.com>"]

[tool.poetry.dependencies]
python = "^3.9"
mkdocs-material = "^6.2.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
